# cashd

./: .gitignore  README.md  pyproject.toml
.github/badges/: fedora.json  ubuntu.json  windows.json
.github/workflows/: cashd-core-publish.yml  cashd-local-build.yml  cashd-local-test-build  cashd-local-test-build.yaml  cashd-server-publish.yml  python-publish.yml
app/: __main__.css  __main__.pyw  backup.py  db.py  startup.py
app/cashd/: __main__.css  __main__.pyw
app/cashd/pages/: configs.py  contas.py  dialogo.py
app/configs/: backup.ini
app/pages/: analise.py  configs.py  contas.py  dialogo.py  transac.py
cashd-core/: pyproject.toml
cashd-core/src/cashd_core/: backup.py  const.py  data.py  fmt.py  prefs.py
cashd-core/src/cashd_core/pdf/model/: __init__.py  base.py  invoice.py
cashd-core/tests/: test_backup.py  test_prefs.py
cashd-local/: CHANGELOG  LICENSE  README.md  README.rst  pyproject.toml
cashd-local/src/cashd/: __main__.py  app.py  backup.py  const.py  data.py  style.py
cashd-local/src/cashd-local/: backup.py  const.py  data.py  style.py
cashd-local/src/cashd-local/pages/: __init__.py  config.py  main.py
cashd-local/src/cashd-local/widgets/: paginated.py
cashd-local/src/cashd/pages/: base.py  config.py  main.py  new_customer.py  stats.py
cashd-local/src/cashd/style/: __init__.py  compose.py
cashd-local/src/cashd/widgets/: __init__.py  elems.py  form.py  paginated.py
cashd-local/src/cashd_local/: __main__.py  app.py  backup.py  data.py  prefs.py  style.py
cashd-local/src/cashd_local/configs/: backup.ini  prefs.ini
cashd-local/src/cashd_local/pages/: base.py  config.py  main.py  new_customer.py  stats.py
cashd-local/src/cashd_local/widgets/: __init__.py  elems.py  form.py  paginated.py
cashd-local/tests/: mock_data.py  test_backup.py  test_data.py  test_prefs.py
cashd-server/: README.md  pyproject.toml  pytest.ini
cashd-server/src/cashd/: __init__.py  app.css  app.py  auth.py  backup.py  const.py  data.py  plot.py
cashd-server/src/cashd/configs/: backup.ini
cashd-server/src/cashd/pages/: analise.py  config.py  configs.py  contas.py  customer.py  dialogo.py  login.py  main.py  stats.py  transac.py  user.py
cashd-server/src/cashd/widgets/: custom.py  dialogs.py  parts.py
cashd-server/src/cashd_nice/: __init__.py  app.py  auth.py  const.py  widgets.py
cashd-server/src/cashd_nice/pages/: config.py  customer.py  login.py  main.py  stats.py  user.py
cashd-server/src/cashd_nice/widgets/: custom.py  dialogs.py  parts.py
cashd-server/tests/: conftest.py  test_auth.py
notebooks/: plot_studio.ipynb
scripts/: startup.py
src/cashd/: __main__.css  app.py  backup.py  db.py  plot.py  prefs.py  startup.py
src/cashd/configs/: backup.ini
src/cashd/pages/: analise.py  configs.py  contas.py  dialogo.py  transac.py
tests/: test_backup.py
