[project]
name = "cashd"
authors = [
    {name = "Vitor F. Lins", email = "vflins@live.com"},
]
description = "Manage a simple cash flow operations on different accounts locally."
requires-python = ">=3.8"
keywords = ["cash-flow", "ftp"]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Windows",
]
version = "0.1.0"
dependencies = [
    "taipy==3.1.0",
    "SQLAlchemy==2.0.25",
    "pywebview==5.0.5",
    "phonenumbers==8.13.31",
    "pandas==2.2.0",
    "pyshortcuts==1.9.0",
    "plotly==5.22.0"
]

[project.optional-dependencies]
dev=[
    "pytest-cov>=5.0.0",
    "black>=24.4.2",
    "ipykernel",
    "nbformat"
]

[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project.gui-scripts]
cashd = "cashd.startup:window"

[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = "src"
addopts = "--cov=src --cov-report html"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false